added responsive navbar

--- a/src/components/ProfileCard/profileCard.css
+++ b/src/components/ProfileCard/profileCard.css
@@ -19,7 +19,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: 130%; /* 18.2px */
-  margin-bottom: 6px;
+  /* margin-bottom: 6px; */
 }
 
 .memberName {
